--- a/v1_net45/packages.config
+++ b/v1_net45/packages.config
@@ -3,5 +3,5 @@
   <package id="xunit" version="1.9.2" targetFramework="net45" />
   <package id="xunit.abstractions" version="2.0.1" targetFramework="net45" />
   <package id="xunit.extensions" version="1.9.2" targetFramework="net45" />
-  <package id="xunit.runner.visualstudio" version="2.2.0-beta6-build1242" targetFramework="net45" developmentDependency="true" />
+  <package id="xunit.runner.visualstudio" version="2.2.0-rc1-build1245" targetFramework="net45" developmentDependency="true" />
 </packages>
