--- a/v2x_UWP/project.json
+++ b/v2x_UWP/project.json
@@ -1,8 +1,8 @@
 ﻿{
   "dependencies": {
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
-    "xunit": "2.2.0-beta6-build3495",
-    "xunit.runner.visualstudio": "2.2.0-beta6-build1242"
+    "xunit": "2.2.0-rc1-build3507",
+    "xunit.runner.visualstudio": "2.2.0-rc1-build1245"
   },
   "frameworks": {
     "uap10.0": {}
