--- a/v2x_netcoreapp1.0/project.json
+++ b/v2x_netcoreapp1.0/project.json
@@ -10,7 +10,7 @@
       "type": "platform",
       "version": "1.0.1"
     },
-    "xunit": "2.2.0-beta6-build3495"
+    "xunit": "2.2.0-rc1-build3507"
   },
   "frameworks": {
     "netcoreapp1.0": {}
