--- a/v2x_net452_DotNetSdk/v2x_net452_DotNetSdk.csproj
+++ b/v2x_net452_DotNetSdk/v2x_net452_DotNetSdk.csproj
@@ -1,23 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp1.0</TargetFramework>
+    <OutputType>Exe</OutputType>
+    <RuntimeIdentifier>win7-x64</RuntimeIdentifier>
+    <TargetFramework>net452</TargetFramework>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Content Include="xunit.runner.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0-preview-20170217-05" />
     <PackageReference Include="xunit" Version="2.2.0-rc5-build3544" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0-rc5-build1272" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
   </ItemGroup>
 
 </Project>
