--- a/v2x_net452_DotNetSdk/v2x_net452_DotNetSdk.csproj
+++ b/v2x_net452_DotNetSdk/v2x_net452_DotNetSdk.csproj
@@ -1,8 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <RuntimeIdentifier>win7-x64</RuntimeIdentifier>
     <TargetFramework>net452</TargetFramework>
   </PropertyGroup>
 
@@ -10,6 +8,10 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
     <PackageReference Include="xunit" Version="2.3.0-beta1-build3630" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.0-beta1-build1303" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
   </ItemGroup>
 
 </Project>
