--- a/v2x_MultiTarget_DotNetSdk/v2x_MultiTarget_DotNetSdk.csproj
+++ b/v2x_MultiTarget_DotNetSdk/v2x_MultiTarget_DotNetSdk.csproj
@@ -5,8 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="xunit" Version="2.3.0-beta1-build3633" />
-    <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.0-beta1-build3633" />
+    <PackageReference Include="xunit" Version="2.3.0-beta1-build3637" />
+    <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.0-beta1-build3637" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
   </ItemGroup>
 
 </Project>
